[package]
name = "add"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"]  }
